# soft-cuda

./: .clang-format  .gitignore  ;  CMakeLists.txt  README.md  check.txt  error.txt  main.cpp  make.sh  requirements.txt  summary.txt  temp
.github/workflows/: ci-test.yml
Experiments/: broadcasting_add.py
benchmarks/: CMakeLists.txt  bench_deep_mlp.cpp  bench_pytorch.py  bench_softcuda.cpp  run_all.sh
build_wsl/: soft  soft_profiler
build_wsl/benchmarks/: bench_deep_mlp  bench_softcuda
build_wsl/tests/: cmake_test_discovery_8e2263b017.json  tensor_tests[1]_include.cmake  tensor_tests[1]_tests.cmake
coldstart/: .env  coldstart.sh  coldstart_agent.py
docs/: PYTHON_BRIDGE.md
include/soft-cuda/profiler/: profiler_core.h
include/soft-cuda/python/: soft_cuda_python.h  tensor_core.h  tensor_graph.h  tensor_io.h  tensor_ops.h  tensor_pool.h
include/soft-cuda/tensor/: api.h  debug_api.h  tensor.h
misc/: add
notes/Backward/: MemoryModel.md
notes/math/: matrix.md
notes/memalloc/: memoryNotes.md
scripts/Experiments/: broadcasting_add.py
scripts/Experiments/config/: app  data.json  json.cpp  json_utils.cpp  json_utils.h  ke
scripts/Experiments/misc/: add.cu
scripts/coldstart/: coldstart.prev  coldstart.sh  system_prompt.txt
src/: internal_header.h  main.cpp
src/backend_cpu/backprop/: backprop_b.cpp  backprop_b.cu  backprop_cuda_bridge.cu  matmul_b.cpp
src/backend_cpu/base/: debug.cpp
src/backend_cpu/include/: add.h  debug.h  mean.h  mul.h  relu.h  scalar.h  square.h  sub.h  transpose.h
src/backend_cpu/include/backprop/: backprop_b.h
src/backend_cpu/math/: add.cpp  bias_add.cpp  mean.cpp  mse.cpp  mul.cpp  relu.cpp  scalar.cpp  square.cpp  sub.cpp  transpose.cpp
src/backend_gpu/: placeholder.md
src/backend_gpu/backprop/: backprop_gpu.cu
src/backend_gpu/include/backprop/: backprop_gpu.h
src/backend_gpu/include/math/: add.h  broadcast_add.h  matmul.h  mean.h  relu.h  scalar_mul.h  square.h  sub.h
src/backend_gpu/kernels/: sgemm_double_buffer.cuh
src/backend_gpu/math/: add.cu  broadcast_add.cu  matmul.cu  mean.cu  relu.cu  scalar_mul.cu  square.cu  sub.cu
src/core/JSON/: json.cpp  json_utils.cpp
src/core/graph/: DAGbuild.cpp  assignBackend.cpp  assignBackend.cu  saveLoad.cpp  train.cpp
src/core/include/JSON/: json_utils.h
src/core/include/graph/: DAGbuild.h  assignBackend.h
src/core/include/pool/: pool.h
src/core/include/tensor/: tensor.h
src/core/pool/: pool.cpp  pool.cu
src/core/tensor/: tensor.cpp  tensor.cu
src/core/utils/: constructJSON.cpp  deconstructJSON.cpp
src/init/config/: CONFIG.soft  profiler.cu  profiler_core.cu  soft_init.h
src/python/: sc_bridge.cpp
tests/: CMakeLists.txt  CmakeList.txt  test_backend.cpp  test_backprop.cpp  test_graph.cpp  test_mul.cpp  test_ops.cpp
tests/soft-cuda/tensor/: tensor.cpp  test_tensor.cpp
